2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/elements/gstfakesink.c:
	(marshal_VOID__MINIOBJECT_OBJECT), (gst_fake_sink_class_init):
	* plugins/elements/gstfakesrc.c: (marshal_VOID__MINIOBJECT_OBJECT),
	(gst_fake_src_class_init):
	Use custom marshalers that take GstMiniObject as first parameter.
	Using OBJECT as parameter while a GstMiniObject is given will lead
	to assertions if built with G_ENABLE_DEBUG. Fixes bug #525532.

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/elements/gsttypefindelement.c:
	(gst_type_find_element_handle_event),
	(gst_type_find_element_send_cached_events),
	(gst_type_find_element_change_state):
	Clean up on FLUSH_STOP and not FLUSH_START. Forward both events
	immediately.

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/elements/gsttypefindelement.c:
	(gst_type_find_handle_src_query), (stop_typefinding),
	(gst_type_find_element_handle_event),
	(gst_type_find_element_send_cached_events),
	(gst_type_find_element_change_state):
	Forward FLUSH_START events immediately and clean up instead of
	caching them.

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Sjoerd Simons <sjoerd at luon dot net>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_buffer_alloc):
	Check the caps of the buffer returned by gst_pad_alloc_buffer() and
	fall back to default negotiation in the chain function if the caps
	are different from what was requested. Fixes bug #526768.

2008-05-09  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstsegment.c:
	* tests/check/gst/gstsegment.c:
	  No, let's not use g_slice_{dup|copy} here, since they only exist
	  since GLib 2.14 and we still depend only on >= 2.12. Also add
	  unit test for gst_segment_copy().

2008-05-09  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstutils.h: (GST_BOILERPLATE_FULL):
	  Try to fix 'dereferencing type-punned pointer will break strict