@@ -1,3 +1,11 @@
+2008-05-14  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* gst/parse/grammar.y:
+	Remove unneeded value unset.
+
+	* tests/check/gst/gstvalue.c: (GST_START_TEST), (gst_value_suite):
+	Add unit test for de/serialization of caps.
+
 2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* plugins/elements/gstfakesink.c:
